# PrankCam

./: .env.local.example  .gitignore  CHANGELOG.md  GITHUB_SECRETS.md  LICENSE.txt  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
backend/: audio_pipeline.py  capture_face.py  content_packs.py  logging_config.py  main.py  ml_pipeline.py  model_manager.py  personas.py  prankcam-backend.spec  requirements-build.txt  requirements.txt  rvc_export.py  watchdog.py
scripts/: build-all.ps1  build-all.sh  build-backend.ps1  build-backend.sh  dev.sh  download-drivers.ps1  (+3 more)
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer-hook.nsi
src-tauri/resources/backend-libs/aarch64-apple-darwin/_internal/_sounddevice_data/portaudio-binaries/: libportaudio.dylib
src-tauri/resources/backend-libs/aarch64-apple-darwin/_internal/cv2/.dylibs/: libX11.6.dylib  libXdmcp.6.dylib  libaom.3.8.0.dylib  libaribb24.0.dylib  libavformat.60.3.100.dylib  libavutil.58.2.100.dylib  libbrotlicommon.1.1.0.dylib  libcjson.1.7.17.dylib  libdav1d.7.dylib  libfontconfig.1.dylib  libfreetype.6.dylib  libhwy.1.0.7.dylib  libintl.8.dylib  libjxl.0.8.2.dylib  libmp3lame.0.dylib  libnettle.8.8.dylib  libopencore-amrnb.0.dylib  libopencore-amrwb.0.dylib  libopenjp2.2.5.0.dylib  libpng16.16.dylib  librav1e.0.6.6.dylib  librist.4.dylib  libsodium.26.dylib  libsoxr.0.1.2.dylib  libswresample.4.10.100.dylib  libswscale.7.1.100.dylib  libtasn1.6.dylib  libtheoradec.1.dylib  libtheoraenc.1.dylib  libvorbis.0.dylib  libvpx.8.dylib  libwebp.7.1.8.dylib  libwebpmux.3.0.13.dylib  libx265.199.dylib
src-tauri/resources/backend-libs/aarch64-apple-darwin/_internal/scipy/special/: libsf_error_state.dylib
src-tauri/src/: main.rs
(+9 files in other folders)
